# fastmail-mcp-server

./: .env.example  .gitignore  .woodpecker.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/fastmail_mcp/: __main__.py  config.py  middleware.py  server.py
src/fastmail_mcp/jmap/: client.py  mailbox.py
src/fastmail_mcp/oauth/: routes.py  scopes.py  token_cache.py
src/fastmail_mcp/tools/: email_tools.py
src/fastmail_mcp/utils/: quote_cleaner.py  summarizer.py
tests/: list_emails.py  test_config.py  test_integration.py  test_label_filter.py  test_quote_cleaner.py  test_scopes.py  test_summarizer.py  test_token_cache.py
